@@ -1,12 +1,11 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /cvsroot/jacklab/gentoo/media-sound/gneutronica/gneutronica-0.28.ebuild,v 1.2 2006/04/11 13:47:15 gimpel Exp $
 
 EAPI=5
-inherit base toolchain-funcs
+inherit base eutils toolchain-funcs
 
-DESCRIPTION="A simple MIDI drum machine program modeled to a large extent on the
-Hydrogen drum machine software"
+DESCRIPTION="A simple MIDI drum machine program modeled to a large extent on the Hydrogen drum machine software"
 HOMEPAGE="http://gneutronica.sourceforge.net/"
 SRC_URI="mirror://sourceforge/gneutronica/${P}.tar.gz"
 
@@ -21,8 +20,14 @@ DEPEND="gnome-base/libgnomecanvas
 
 RESTRICT="mirror"
 
-PATCHES=( "${FILESDIR}"/${P}-makefile.patch )
+PATCHES=( "${FILESDIR}"/${P}-makefile.patch
+	"${FILESDIR}"/${P}-linking.patch )
 
 src_compile() {
 	base_src_make CC="$(tc-getCC)"
+}
+
+src_install() {
+	base_src_install PREFIX="/usr"
+	make_desktop_entry "${PN}" "gNeutronica" "${PN}_icon" "AudioVideo;Audio;Midi;"
 }
