@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Apr 2014; Dominique Michel <dominique_libre@users.sourceforge.net>
+  +files/gneutronica-0.33-linking.patch:
+  fix linking with -lm; add desktop file with eutils eclass.
+
 *gneutronica-0.33-r1 (30 Apr 2013)
 
   30 Apr 2013; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
